--- a/style1.css
+++ b/style1.css
@@ -16,11 +16,12 @@
 }
 #menu_left{
     float: left;
-    width: 10%;
+    width: 12%;
     background-color: #323d5c;
     height: 87.15vh;
-    font-size: 1.8vh;
+    font-size: 1.5vh;
     text-align: center;
+	padding: 5px;
 }
 #footer{
     width: 100%;
@@ -33,7 +34,7 @@
 }
 #main{
     float: left;
-    width: 90%;
+    width: 88%;
     height: 87.15vh;
 }
 .lwew{
@@ -122,6 +123,9 @@ nav .icon-burger .line {
 	margin: 5px;
 	border-radius: 3px;
 	transition: all .3s ease-in-out;
+}
+.und{
+	text-decoration: underline;
 }
 @media screen and (max-width: 600px) {
 	nav .logo {
